# Song-Writer

./: .gitignore  cadence_pattern_library.txt  cadence_rule_songwriting_framework.txt  deathcore_hit_pattern_map.txt  phonetic_texture_rule_songwriting.txt  pop_structure_hook_library.txt  rap_artist_mode_matrix.txt  rhyming_cadence_interaction_guide.txt  rnb_structure_vocab_library.txt  sentence_rule_lyric_validation.txt  songwriter_cerebras_repair_advice.md  songwriter_cheaper_better_pipeline.md  songwriter_token_bleed_fix_plan.md  songwriting_system_master_guide.txt  story_rule_songwriting_framework.txt  suno_prompt_framework.txt  universal_lyric_improvement_process.txt
songwriter/: .gitignore  README.md  pyproject.toml  start.sh
songwriter/apps/web/: package-lock.json  (+2 more)
songwriter/data/: README.md  burn_list.yml  cadence_patterns.yml  emotion_tempo_map.yml  genres.yml  production_fingerprints.yml  schema.sql  structure_templates.yml
songwriter/docs/: brainstorm-log.md
songwriter/scripts/: brainstorm-agent.py  build-app.sh  install-brainstorm-cron.sh  install-service.sh  launch-app.sh  service.sh  uninstall-service.sh
songwriter/tests/: conftest.py  test_arpabet_ipa.py  test_build_integration.py  test_cmudict.py  test_db.py  test_derived.py  test_gruut_fallback.py  test_phonemes.py  test_seeder_burn_list.py  test_seeder_cadence.py  test_seeder_descriptors.py  test_seeder_emotion_tempo.py  test_seeder_genres.py  test_seeder_production.py  test_seeder_songwriters.py  test_seeder_structure.py  test_seeder_vocab.py  test_seeder_words.py  test_yaml_loader.py
(+257 files in other folders)
