[project]
name = "songwriter"
version = "0.1.0"
description = "Songwriter app data layer + build pipeline"
requires-python = ">=3.12"
dependencies = [
  "pyyaml>=6.0",
  "gruut[en]>=2.4",
  "requests>=2.31",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "watchdog>=4.0",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[project.scripts]
songwriter-build = "songwriter.seeds.build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/songwriter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
asyncio_mode = "auto"
