[package]
name = "songwriter"
version = "0.1.0"
description = "Songwriter desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "songwriter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
